# projet_M1

./: README.md  pyproject.toml
chempkg/: atom.py  mol.py  reaction_utils.py
tests/: test_atom.py  test_molecule.py  test_reactions_utils.py
